# articulated-objects

./: index.md
_layouts/: default.html
_sass/: jekyll-theme-minimal.scss
ros_package/articulated_objects_db/: CMakeLists.txt  package.xml
ros_package/articulated_objects_db/cfg/: visualize_recording.rviz  visualize_recording_ft.rviz
ros_package/articulated_objects_db/launch/: play_recording.launch
ros_package/articulated_objects_db/scripts/: play_recording.py
ros_package/articulated_objects_rbo/: CMakeLists.txt  README  data
ros_package/articulated_objects_rbo/launch/: visualize_recording_ft.rviz
ros_package/articulated_objects_rbo/scripts/: play_recording.py
scripts/: rbo_downloader.py  rbo_visualizer.py
videos/: book01.avi  cabinet01.avi  clamp01.avi  foldingrule01.avi  globe01.avi  ikeasmall01.avi  laptop01.avi  microwave01.avi  pliers01.avi  treasurebox01.avi
